--- a/vnotebook/Linux&&C/基础.md
+++ b/vnotebook/Linux&&C/基础.md
@@ -20,3 +20,6 @@ printf();只是将内容输出到缓冲区中，只有在遇到\n或者是缓冲
 3. sizeof(指针) 返回指针变量本身的大小，同一台机器上，所有指针变量的大小都是一样的。
 sizeof(数组名) 返回数组占用的字节数，以'\0'结束， 包括‘\0’。
 4. 当函数使用数组作为参数时， 但在数组函数内部， 数组名已经变成了指针。
+
+
+![Screenshot_20210309_181207](_v_images/20210309181228416_483886559.png)
