--- a/vnotebook/Linux&&C/信号.md
+++ b/vnotebook/Linux&&C/信号.md
@@ -11,7 +11,7 @@
      使用sigprocmask函数。sigaction也能阻塞信号, 但只是在执行信号处理函数时阻塞。
 
 void (*signal(int sig, void (*func)(int)))(int);
-signal先与()结合，说明是一个函数，再与*结合，说明函数的返回值是一个指针，再与(int)结合，说明指针指向一个形参为int的函数，最后与void结合，说明指向的函数的返回值是void
+signal先与()结合，说明是一个函数，再与\*结合，说明函数的返回值是一个指针，再与(int)结合，说明指针指向一个形参为int的函数，最后与void结合，说明指向的函数的返回值是void
 
 收到信号要执行的动作：SIG_IGN(忽略)；SIG_DFL(默认动作)；执行一个函数。 SIG_ERR 表示signal函数调用错误
 
