--- a/vnotebook/计算机网络/基础.md
+++ b/vnotebook/计算机网络/基础.md
@@ -1,3 +1,8 @@
+### TCP报文格式
+![tcp报文](vx_images/3852906238683.png)
+
+### IP报文格式
+![ip报文](vx_images/4151389796206.png)
 主机号全0表示网络地址，指该网络。
 主机号全1表示广播地址，指网络上的所有主机。
 
@@ -38,6 +43,14 @@ TCP的6种报文（主要用前5种）：
   FIN 表示请求关闭连接
  RST  表示请求重置连接 
  URG 表示有紧急数据，紧急指针有效
+
+
+### 转发与交换
+    转发（forward） 指数据包从一个网络到另一个网络，发生在网络层（三层）
+    （当一台设备上有多块网卡时，根据收到的数据包的目的IP地址，将其发送到本设备的加一台网卡）
+
+    交换（switch） 指数据包本网格的一台设备到另一台设备，发生在数据链路层（二层）
+        （根据收到的数据包的目的MAC地址，将其发送到本网络的加一台设备）
 
 
 
