--- a/vnotebook/计算机网络/安全.md
+++ b/vnotebook/计算机网络/安全.md
@@ -1,10 +1,13 @@
-对称加密算法：是指加密和解密使用相同的密钥，典型的有DES，RC5，IDEA（分组加密），RC4（序列加密）
+    对称加密算法：是指加密和解密使用相同的密钥，典型的有DES，3DES， AES，DESX，RC4，RC5，RC6
+    非对称加密算法：是指加密和解密使用不同的密钥，典型的有RSA，DSA，ECC。
+    散列算法：也称摘要算法，是指通过某种方式将数据变成固定长度的值（散列值），典型的算法有：MD5，SHA-1，SHA-256，SHA-512等。
 
-非对称加密算法：又称为公钥加密算法，是指加密和解密使用不同的密钥（公钥用于加密，私钥用于解密），反过来也可以用私钥加密公钥解密，典型的算法有RSA，DSA，DH。 另一个作用是实现密钥交换
+    数字摘要：可简单理解为一个HASH值，使用HASH算法对一段数据进行HASH计算得到
+    数字签名：使用非对称加密对数字数字摘要进行加密即得到数字签名（这是使用是的私钥加密 ）
+    签名算法：计算摘要并对其进行加密，所以摘要算法与非对称算法的混合使用，有MD5withRSA，SHA1withRSA等
 
-散列算法：摘要算法，文件内容通过某种公开的算法，变成固定长度的值（散列值），这个过程可以使用密钥也可以不使用。这种散列变换是不可逆的，也就是说不能从散列值变成原文。因此，散列变换通常用于验证原文是否被篡改。典型的算法有：MD5，SHA，Base64，CRC等。
 
-密钥交换算法：通常是非对称密码算法。 1 通过其他非计算机网络的方式交换 2 公钥证书  3 Diffie -Hellman算法
 
-摘要：server对要发送的数据进行hash计算得到摘要，用私钥对摘要进行加密得到数字签名，然后再将数据和签名一起发送到client，数据是否加密是另外一回事。client首先对收到的数据进行
-hash计算得到摘要，然后用公钥对收到的数字签名进行解密得到摘要，比较两个摘要是否相同就能知道数据有没有被更改。
+    密钥交换算法：指在不安全的信道上安全地传输密钥，通常使用DH（Diffie -Hellman）算法
+
+    Hmac（Hash-based Message Authentication Code）算法：是一种更安全的HASH算法，是在HASH算法的基础上加了个key，使key与原始输入一起作为新的输入
